<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1050</width>
    <height>598</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>拧紧枪数据库处理</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout" stretch="4,1">
    <property name="sizeConstraint">
     <enum>QLayout::SetNoConstraint</enum>
    </property>
    <item>
     <widget class="QTabWidget" name="figure">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>5</horstretch>
        <verstretch>5</verstretch>
       </sizepolicy>
      </property>
      <property name="currentIndex">
       <number>0</number>
      </property>
      <widget class="QWidget" name="figure_production">
       <attribute name="title">
        <string>生产统计数据</string>
       </attribute>
      </widget>
      <widget class="QWidget" name="figure_torque">
       <attribute name="title">
        <string>扭矩统计数据</string>
       </attribute>
      </widget>
     </widget>
    </item>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout" stretch="1,0,0">
      <property name="sizeConstraint">
       <enum>QLayout::SetFixedSize</enum>
      </property>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
           <spacer name="verticalSpacer_7">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QLabel" name="label_spindle">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="text">
             <string>拧紧枪编号</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_9">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_5">
            <property name="text">
             <string>数据开始时间</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_6">
            <property name="text">
             <string>数据结束时间</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_7">
            <property name="text">
             <string>数据总数</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_5">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_total_production">
            <property name="text">
             <string>生产量</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_total_qualification">
            <property name="text">
             <string>合格率</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_total_mean">
            <property name="text">
             <string>扭矩均值</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_total_std">
            <property name="text">
             <string>扭矩标准差</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_7">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
             <string>对比拧紧枪编号</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_3">
            <property name="text">
             <string>相关度</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item>
         <widget class="Line" name="line_2">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
            <horstretch>1</horstretch>
            <verstretch>1</verstretch>
           </sizepolicy>
          </property>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
         </widget>
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_5">
          <item>
           <spacer name="verticalSpacer_8">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QLabel" name="spindle">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_10">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_total_start">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_total_end">
            <property name="text">
             <string>NaN </string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_total_num">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_6">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="total_production">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="total_qualification">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="total_mean">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="total_std">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="Line" name="line_8">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_comp_spindle_id">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_correlation">
            <property name="text">
             <string>NaN</string>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </item>
      <item>
       <widget class="Line" name="line">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QTabWidget" name="tabWidget">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>1</horstretch>
          <verstretch>1</verstretch>
         </sizepolicy>
        </property>
        <property name="currentIndex">
         <number>0</number>
        </property>
        <widget class="QWidget" name="tabWidgetPage1">
         <attribute name="title">
          <string>时间分割</string>
         </attribute>
         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0,0,0,0,0,0,0,0,0,0,0,0,0">
          <item>
           <widget class="QLabel" name="label_current_start_time">
            <property name="text">
             <string>当前开始时间</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="current_start_time">
            <property name="text">
             <string>NaT</string>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="verticalSpacer_2">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeType">
             <enum>QSizePolicy::Fixed</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>5</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QLabel" name="label_current_end_time">
            <property name="text">
             <string>当前结束时间</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="current_end_time">
            <property name="text">
             <string>NaT</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="button_detial_time">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="text">
             <string>显示详细图像</string>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="verticalSpacer_9">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="Line" name="line_4">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="verticalSpacer_10">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QLabel" name="label_start_time">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="text">
             <string>开始时间</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QDateEdit" name="start_time">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="calendarPopup">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_end_time">
            <property name="text">
             <string>结束时间</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QDateEdit" name="end_time">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="calendarPopup">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="button_time">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="text">
             <string>刷新图像</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
        <widget class="QWidget" name="tabWidgetPage2">
         <attribute name="title">
          <string>组号分割</string>
         </attribute>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
           <widget class="QLabel" name="label_current_start_num">
            <property name="text">
             <string>当前开始组号</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="current_start_num">
            <property name="text">
             <string>NaT</string>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="verticalSpacer">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeType">
             <enum>QSizePolicy::Fixed</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>5</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QLabel" name="label_current_end_num">
            <property name="text">
             <string>当前结束组号</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="current_end_num">
            <property name="text">
             <string>NaT</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="button_detial_num">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="text">
             <string>显示详细图像</string>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="verticalSpacer_11">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="Line" name="line_3">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
           </widget>
          </item>
          <item>
           <spacer name="verticalSpacer_12">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QLabel" name="label_start_num">
            <property name="text">
             <string>区域绘图开始组数</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QSpinBox" name="start_num">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QLabel" name="label_end_num">
            <property name="text">
             <string>区域绘图结束组数</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QSpinBox" name="end_num">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="button_num">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
            <property name="text">
             <string>刷新图像</string>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1050</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>文件</string>
    </property>
    <addaction name="actionOpen"/>
    <addaction name="actionOpenComp"/>
    <addaction name="actionSpindleFatigue"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuSpindle">
    <property name="title">
     <string>拧紧枪</string>
    </property>
    <addaction name="actionChange_Spindle_ID"/>
    <addaction name="actionAddSpindle"/>
   </widget>
   <widget class="QMenu" name="menuPlot">
    <property name="title">
     <string>图像</string>
    </property>
    <widget class="QMenu" name="menuspc_figure">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="title">
      <string>绘制SPC图</string>
     </property>
     <addaction name="actionspc_xr"/>
    </widget>
    <widget class="QMenu" name="menuPlotFrequence">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="title">
      <string>频域分析</string>
     </property>
     <addaction name="actionPlotSpecgram"/>
     <addaction name="actionPlotFFT"/>
    </widget>
    <addaction name="actionClearTorque"/>
    <addaction name="actionClear_ALL"/>
    <addaction name="separator"/>
    <addaction name="menuspc_figure"/>
    <addaction name="menuPlotFrequence"/>
   </widget>
   <widget class="QMenu" name="menuSetting">
    <property name="title">
     <string>设置</string>
    </property>
    <addaction name="actionPartNum"/>
    <addaction name="actionDefaultReadTime"/>
    <addaction name="actionReverseTime"/>
    <addaction name="actionDefaultLatestNum"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuSpindle"/>
   <addaction name="menuPlot"/>
   <addaction name="menuSetting"/>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
  <action name="actionOpen">
   <property name="text">
    <string>打开数据库</string>
   </property>
  </action>
  <action name="actionExit">
   <property name="text">
    <string>退出</string>
   </property>
  </action>
  <action name="actionChange_Spindle_ID">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>设置拧紧枪ID</string>
   </property>
  </action>
  <action name="actionClear_ALL">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>清除所有图像</string>
   </property>
  </action>
  <action name="actionClearTorque">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>清除扭矩图像</string>
   </property>
  </action>
  <action name="actionspc_xr">
   <property name="enabled">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>SPC XR</string>
   </property>
  </action>
  <action name="actionAddSpindle">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="text">
    <string>设置对比拧紧枪</string>
   </property>
  </action>
  <action name="actionPartNum">
   <property name="text">
    <string>分组数目</string>
   </property>
  </action>
  <action name="actionDefaultReadTime">
   <property name="text">
    <string>中断时间</string>
   </property>
  </action>
  <action name="actionReverseTime">
   <property name="text">
    <string>默认回溯月数</string>
   </property>
  </action>
  <action name="actionPlotSpecgram">
   <property name="text">
    <string>Specgram</string>
   </property>
  </action>
  <action name="actionPlotFFT">
   <property name="text">
    <string>FFT</string>
   </property>
  </action>
  <action name="actionOpenComp">
   <property name="text">
    <string>打开数据库（拧紧枪对比）</string>
   </property>
  </action>
  <action name="actionDefaultLatestNum">
   <property name="text">
    <string>默认读取最新数据量</string>
   </property>
  </action>
  <action name="actionSpindleFatigue">
   <property name="text">
    <string>疲劳监控</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <tabstops>
  <tabstop>start_num</tabstop>
  <tabstop>end_time</tabstop>
  <tabstop>figure</tabstop>
  <tabstop>end_num</tabstop>
  <tabstop>start_time</tabstop>
  <tabstop>button_time</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>actionExit</sender>
   <signal>triggered()</signal>
   <receiver>MainWindow</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>-1</x>
     <y>-1</y>
    </hint>
    <hint type="destinationlabel">
     <x>599</x>
     <y>499</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
